# sara

./: CHANGELOG.md  LICENSE  QUICKSTART.md  README.md  example_run.sh  local_run.sh  pyproject.toml  requirements.txt  run_full_experiment.sh  setup_and_run.sh
configs/: backend.yaml  kd_spar.yaml  nlp_sst2.yaml  rag_migration.yaml  vision_cifar10.yaml
docs/: LEGAL.md  QUICKSTART.md  README.md  blog_deep_dive.html  blog_post_linkedin.md  blog_post_results.html  blog_post_results.md
docs/api/: README.md
docs/guides/: backend_configuration.md  experiments.md  kd_spar_variants.md
docs/paper/: sara_helpers.py  sara_story.bak_20260406_070157  sara_story.bak_20260406_110833  sara_story.bak_20260406_174925  sara_story.bak_20260412_115427  sara_story.py
examples/: 01_response_based_kd.py  02_bert_distillation.py  03_rag_migration.py  04_kd_spar.py  05_multi_teacher_kd_spar.py  06_adversarial_kd_spar.py  07_federated_kd_spar.py  08_ollama_kd_spar.py  09_meta_kd_spar.py  10_enhanced_kd_spar.py
experiments/: ORYXPRO_SETUP.md  __init__.py  collect_results.py  human_eval.py  kd_spar_ablation.py  kd_spar_ablation_ollama.py  patch_paper.py  results_analysis.py  results_charts.py
experiments/docs/: README.md
experiments/results/: ablation_ollama_custom_phi3_3.8b_gemma2_2b_seed123_20260412_101559.json  ablation_ollama_custom_phi3_3.8b_gemma2_2b_seed123_20260412_101559_summary.txt  ablation_ollama_custom_phi3_3.8b_gemma2_2b_seed42_20260412_100508.json  ablation_ollama_custom_phi3_3.8b_gemma2_2b_seed42_20260412_100508_summary.txt  ablation_ollama_custom_phi3_3.8b_gemma2_2b_seed456_20260412_102717.json  ablation_ollama_custom_phi3_3.8b_gemma2_2b_seed456_20260412_102717_summary.txt  ablation_ollama_custom_phi3_3.8b_llama3.2_3b_seed123_20260412_105949.json  ablation_ollama_custom_phi3_3.8b_llama3.2_3b_seed123_20260412_105949_summary.txt  ablation_ollama_custom_phi3_3.8b_llama3.2_3b_seed42_20260412_104236.json  ablation_ollama_llama8b#U2192llama3b_seed101_20260406_174852.json  (+101 more)
ollama_demo_db/: chroma.sqlite3
paper/: sara_helpers.py  sara_story.py
sanity_check_db/: chroma.sqlite3
sara/: __init__.py
tests/: __init__.py  conftest.py  test_advanced.py  test_collect_results.py  test_kd_spar_variants.py  test_losses.py  test_missing_modules.py  test_nlp.py  test_ollama.py  test_rag.py  test_vision.py
(+58 files in other folders)
