[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sara"
version = "1.0.0"
description = "Sara -- Knowledge Distillation and KD-SPAR Toolkit"
authors = [{ name = "Ashutosh Sinha", email = "ajsinha@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["knowledge-distillation", "model-compression", "deep-learning", "rag", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Base install has NO heavy dependencies — just the package itself.
# Choose the extras you need (see below).
dependencies = []

[project.optional-dependencies]

# Vision distillation (ResNet, MobileNet, etc.)
vision = [
    "torch>=2.1",
    "torchvision>=0.16",
]

# NLP / BERT distillation
nlp = [
    "torch>=2.1",
    "transformers>=4.40",
    "datasets>=2.18",
    "evaluate>=0.4",
    "accelerate>=0.28",
]

# RAG pipeline + KD-SPAR (Anthropic API + local Ollama)
rag = [
    "anthropic>=0.25",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "requests>=2.31",
]

# Development and testing
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

# Everything — lists all packages directly (no self-reference which breaks pip)
all = [
    "torch>=2.1",
    "torchvision>=0.16",
    "transformers>=4.40",
    "datasets>=2.18",
    "evaluate>=0.4",
    "accelerate>=0.28",
    "anthropic>=0.25",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "requests>=2.31",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.urls]
Repository = "https://github.com/ashutosh-sinha/sara"

[tool.setuptools.packages.find]
where = ["."]
include = ["sara*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths    = ["tests"]
addopts      = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning", "ignore::UserWarning"]

[tool.ruff]
line-length = 100
target-version = "py310"
